--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,32 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
 
-        tools:listitem="@layout/item_count" />
+        tools:listitem="@layout/item_count" >
+
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:icon="@drawable/baseline_add_24"
+
+        app:rippleColor="@color/colorAccent"
+        app:iconTint="@color/black"
+        app:backgroundTint="@color/blue"
+        android:layout_margin="20dp"
+        android:padding="5dp"
+        android:id="@+id/floatingActionButton"
+
+        />
+
+
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
