--- a/app/src/main/res/layout/item_count.xml
+++ b/app/src/main/res/layout/item_count.xml
@@ -41,6 +41,19 @@
 
         app:layout_constraintTop_toTopOf="parent"/>
 
+            <ImageView
+                android:id="@+id/moreBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                android:src="@drawable/round_more_vert_24"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="5dp"
+
+                />
+
     <ImageView
         android:id="@+id/foodImage"
         android:layout_width="match_parent"
